# RLApilot

./: .gitignore  cli.py  create_structure.py  nodes.csv  pyproject.toml  relationships.csv
data/input/: test.txt
data/ontology/: ontology.json
data/rubric/: rubric_v1_2.md
radiolab_atlas/: __init__.py  config.py
radiolab_atlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
radiolab_atlas/budgets/: __init__.py  budget_manager.py
radiolab_atlas/chunkers/: default_chunker.py
radiolab_atlas/classifiers/: batch_classifier.py  ontology_classifier.py
radiolab_atlas/loaders/: document_loader.py
radiolab_atlas/models/: graph.py  ingestion.py  report.py
radiolab_atlas/pipelines/: orchestrator.py
radiolab_atlas/prefilter/: __init__.py  prefilter.py
radiolab_atlas/telemetry/: __init__.py  cost_logger.py
radiolab_atlas/utils/: logging_utils.py  ontology_loader.py
radiolab_atlas/validators/: ontology_validator.py
radiolab_atlas/writers/: neo4j_writer.py  postgres_writer.py  vector_writer.py
tests/: test_smoke_orchestrator.py
tools/: add_phase1b_skeletons.py
