[project]
name = "radiolab-atlas"
version = "0.1.0"
description = "Radiolab Atlas ingestion pipeline (Phase 1)"
requires-python = ">=3.11"

dependencies = [
  "pydantic>=2.0",
  "neo4j>=5.0",
  "psycopg2-binary>=2.9",
  "SQLAlchemy>=2.0",
  "chromadb>=0.5",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "pdfplumber>=0.11",
  "python-docx>=1.0",
  "python-pptx>=0.6",
  "unstructured>=0.15",
  "langchain>=0.3",
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["."]
